# DNX_Affinity

./: AUTHORS  COPYING  ChangeLog  INSTALL  LEGAL  Makefile.am  NEWS  README  TODO  autogen.sh  checks.tgz  configure.ac  output.pl
DNX.bbprojectd/: jason.bbprojectsettings  project.bbprojectdata
client/: Makefile.am  Makefile.static  dnxClientMain.c  dnxClientMain.h  dnxClientTest.sh  dnxConfig.c  dnxLogging.c  dnxPlugin.c  dnxPlugin.h  dnxProtocol.c  dnxProtocol.h  dnxWLM.c  dnxWLM.h  dnxWorker.c  dnxWorker.h
client/oldtests/: chantest.c  pftest.c  pgrp.c  plugtest.c  readCfg.c  udpc.c  udps.c  xml.c
client/test/: Makefile.am  README  chantest.c  dnxClientTest.sh  makePlugTest.sh  makeXmlTest.sh  pfopen.c  pfopen.h  pftest.c  pgrp.c  plugtest.c  readCfg.c  udpc.c  udps.c  xml.c
common/: Makefile.am  dnxCfgParser.c  dnxCfgParser.h  dnxChannel.h  dnxComStats.c  dnxComStats.h  dnxCommon.c  dnxConfig.h  dnxDebug.h  dnxError.c  dnxError.h  dnxHeap.c  dnxHeap.h  dnxLogging.c  dnxLogging.h  dnxMsgQ.c  dnxMsgQ.h  dnxProtocol.c  dnxProtocol.h  dnxSleep.c  dnxSleep.h  dnxTSPI.h  dnxTcp.c  dnxTcp.h  dnxTransport.c  dnxTransport.h  dnxTypes.h  dnxUdp.c  dnxUdp.h  dnxXml.c  dnxXml.h  pfopen.c  pfopen.h  utesthelp.h
deb/: Makefile.am  README  debian.changelog  debian.changelog.in  debian.control  dnx.dsc
doc/: Makefile.am  dnx.dxy  doxyfile.in  readme.txt
etc/: Makefile.am  dnxClient.cfg  dnxClient.cfg.in  dnxServer.cfg  dnxServer.cfg.in  dnxcld.generic-init.in  dnxcld.init.in  dnxinit
include/: dnxChannel.h  dnxLogging.h  dnxMsgQ.h  dnxNebMain.h  dnxProtocol.h  dnxTimer.h  dnxTransport.h  dnxWLM.h  dnxXml.h
nagios/: README.nagios
nagios/nagios-2.10/: nagios-2.10-dnx.patch
nagios/nagios-2.7/: nagios-2.7-dnx.patch
nagios/nagios-2.9/include/: config.h  nebstructs.h
nagios/nagios-2.x/: nagios-2.7-dnx.patch  nagios-2.9_10-dnx.patch
nagios/nagios-2.x/include/: broker.h  config.h  neberrors.h  objects.h
nagios/nagios-3.0/include/: config.h
nagios/nagios-3.x/: nagios-3.0-dnx.patch  nagios-3.0rc1-dnx.patch  nagios-3.0rc2-dnx.patch
obs/: debian.changelog.in  debian.control.in  debian.rules  debian.rules.in  dnx.dsc.in  dnx.spec.in
rpm/: dnx.spec.in
server/: Makefile.am  Makefile.static  dnxCollector.c  dnxCollector.h  dnxConfig.c  dnxDispatcher.c  dnxDispatcher.h  dnxJobList.c  dnxJobList.h  dnxLogging.c  dnxNebMain.c  dnxNebMain.h  dnxNode.c  dnxNode.h  dnxProtocol.c  dnxProtocol.h  dnxQueue.c  dnxQueue.h  dnxRegistrar.c  dnxRegistrar.h  dnxTimer.c  dnxTimer.h  dsaudit.c  dsaudit.h  dscollector.c  dscollector.h  dsconfig.c  dsconfig.h  dsdispatcher.c  dsdispatcher.h  dsjoblist.c  dsjoblist.h  dslogging.c  dsnebmain.c  dsnebmain.h  dsqueue.c  dsqueue.h  dsregistrar.c  dsregistrar.h  dstimer.c  (+3 more)
server/oldtests/: ftest.c  jltest.c
server/test/: README  ftest.c  jltest.c
stats/: Makefile.am  dnxstats.c
